# django-flashpolicies

./: .coveragerc  .gitignore  .hgignore  .travis.yml  CHANGELOG  INSTALL  INSTALL.txt  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README  README.rst  README.txt  runtests.py  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  deprecations.rst  faq.rst  index.rst  install.rst  make.bat  overview.txt  policies.rst  policies.txt  spelling_wordlist.txt  views.rst
flashpolicies/: models.py  policies.py  runtests.py  test_urls.py  tests.py  views.py
flashpolicies/tests/: __init__.py  policies.py  test_policies.py  test_views.py  urls.py  views.py
flashpolicy/: admin.py  models.py  policies.py  test_urls.py  tests.py  utils.py  views.py
src/flashpolicies/: policies.py  views.py
tests/: test_policies.py  test_views.py  urls.py
